--- a/03-Developer-Skills/starter/index.html
+++ b/03-Developer-Skills/starter/index.html
@@ -10,7 +10,7 @@
         height: 100vh;
         display: flex;
         align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
+        background: linear-gradient(to top left, #0692f0, #e6ff02);
       }
       h1 {
         font-family: sans-serif;
